# kittycad.py

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  config.yml  conftest.py  justfile  kittycad.api.file.file_convert.html  kittycad.api.file.file_convert_with_base64_helper.html  kittycad.api.file.html  kittycad.api.html  kittycad.api.meta.html  kittycad.api.meta.meta_debug_instance.html  kittycad.api.meta.meta_debug_session.html  kittycad.api.meta.ping.html  kittycad.client.html  kittycad.models.auth_session.html  kittycad.models.environment.html  kittycad.models.error_message.html  kittycad.models.file_conversion.html  kittycad.models.file_conversion_status.html  kittycad.models.instance_metadata.html  kittycad.models.message.html  kittycad.models.valid_file_types.html  kittycad.py.patch.json  kittycad.types.html  pyproject.toml  spec.json  spec.yml
kittycad/: README.md  __init__.py  _binary.py  _downloads.py  _file_inputs.py  _io_types.py  _multipart.py  _progress.py  client.py  client_test.py  examples_test.py  exceptions.py  pagination.py  pyproject.toml  response_helpers.py  test_global_client.py  types.py
kittycad/api/ai/: __init__.py  create_image_to_3d.py  create_kcl_code_completions.py  create_text_to_3d.py  create_text_to_cad.py  create_text_to_cad_model_feedback.py  get_ai_prompt.py  get_text_to_cad_model_for_user.py  list_ai_prompts.py  list_text_to_cad_models_for_user.py
kittycad/api/api-calls/: __init__.py  get_api_call.py  get_api_call_for_user.py  get_api_call_metrics.py  get_async_operation.py  list_api_calls.py  list_api_calls_for_user.py  list_async_operations.py  user_list_api_calls.py
kittycad/api/api-tokens/: __init__.py  create_api_token_for_user.py  delete_api_token_for_user.py  get_api_token_for_user.py  list_api_tokens_for_user.py
kittycad/api/api_calls/: __init__.py  get_api_call.py  get_api_call_for_org.py  get_api_call_for_user.py  get_api_call_metrics.py  get_async_operation.py  list_api_calls.py  list_api_calls_for_user.py  list_async_operations.py  org_list_api_calls.py  user_list_api_calls.py
kittycad/api/api_tokens/: __init__.py  create_api_token_for_user.py  delete_api_token_for_user.py  get_api_token_for_user.py  list_api_tokens_for_user.py
kittycad/api/apps/: __init__.py  apps_github_callback.py  apps_github_consent.py  apps_github_webhook.py
kittycad/api/beta/: __init__.py
kittycad/api/constant/: __init__.py  get_physics_constant.py
kittycad/api/drawing/: __init__.py  cmd.py  cmd_batch.py
kittycad/api/executor/: __init__.py  create_executor_term.py  create_file_execution.py
kittycad/api/file/: __init__.py  create_file_2d_vector_conversion.py  create_file_3d_conversion.py  create_file_center_of_mass.py  create_file_center_of_mass_with_uniform_density.py  create_file_conversion.py  create_file_conversion_options.py  create_file_conversion_with_base64_helper.py  create_file_density.py  create_file_execution.py  create_file_mass.py  create_file_surface_area.py  create_file_volume.py  file_conversion_by_id.py  file_conversion_by_id_with_base64_helper.py  file_conversion_status.py  file_conversion_status_with_base64_helper.py  file_convert.py  file_convert_with_base64_helper.py  get_file_conversion.py  get_file_conversion_for_user.py  get_file_conversion_with_base64_helper.py  list_file_conversions.py  list_file_conversions_for_user.py  post_file_conversion.py  post_file_conversion_with_base64_helper.py
kittycad/api/hidden/: __init__.py  auth_api_key.py  auth_email.py  auth_email_callback.py  get_auth_saml.py  get_auth_saml_by_org.py  listen_auth_email.py  listen_auth_email_callback.py  login.py  logout.py  post_auth_saml.py  redirect_user_shortlink.py
kittycad/api/internal/: __init__.py  gpu_devices.py  stop_async_conversions.py
kittycad/api/meta/: __init__.py  auth_session.py  community_sso.py  create_debug_uploads.py  create_event.py  get_ai_plugin_manifest.py  get_ipinfo.py  get_metadata.py  get_metrics.py  get_openai_schema.py  get_pricing_subscriptions.py  get_schema.py  instance_metadata.py  internal_get_api_token_for_discord_user.py  meta_debug_session.py  ping.py
kittycad/api/ml/: __init__.py  create_kcl_code_completions.py  create_proprietary_to_kcl.py  create_text_to_cad.py  create_text_to_cad_iteration.py  create_text_to_cad_model_feedback.py  create_text_to_cad_multi_file_iteration.py  get_ml_prompt.py  get_text_to_cad_model_for_user.py  list_conversations_for_user.py  list_ml_prompts.py  ml_copilot_ws.py  (+2 more)
kittycad/kittycad/: __init__.py  client.py
kittycad/models/: __init__.py  account_provider.py  add_hole_from_offset.py  add_org_member.py  address.py  address_details.py  adjacency_info.py  ai_feedback.py  ai_plugin_api.py  ai_plugin_api_type.py  ai_plugin_auth.py  ai_plugin_auth_type.py  ai_plugin_http_auth_type.py  ai_plugin_manifest.py  ai_prompt.py  ai_prompt_metadata.py  ai_prompt_results_page.py  ai_prompt_type.py  angle.py  annotation_basic_dimension.py  annotation_feature_control.py  annotation_feature_tag.py  annotation_line_end.py  annotation_line_end_options.py  annotation_mbd_basic_dimension.py  annotation_mbd_control_frame.py  annotation_options.py  annotation_text_alignment_x.py  annotation_text_alignment_y.py  annotation_text_options.py  annotation_type.py  api_call_query_group.py  api_call_query_group_by.py  api_call_status.py  api_call_with_price.py  api_call_with_price_results_page.py  api_endpoint.py  api_error.py  api_token.py  api_token_results_page.py  (+609 more)
kittycad/tests/: __init__.py  example_usage.py  test_assets_project_e2e.py  test_assets_project_e2e_async.py  test_autocompletion.py  test_client.py  test_client_comprehensive.py  test_enhanced_exception_handling.py  test_example_usage.py  test_examples.py  test_exception_handling.py  test_file_operations.py  test_httpx_pooling.py  test_ml_copilot_ws_regression.py  test_ml_reasoning_ws_regression.py  test_multifile_iteration_e2e.py  test_optional_datetime_parsing.py  test_pagination.py  test_pagination_comprehensive.py  test_unset_and_pydantic.py  test_win_ca_smoke.py
(+6909 files in other folders)
