[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kittycad"
version = "1.2.9"
description = "A client library for accessing KittyCAD"
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "attrs>=20.1.0,<26.0.0",
  "httpx>=0.27.2,<0.29.0",
  "python-dateutil>=2.8.0,<3.0.0",
  "websockets>=14.1.0,<16.0.0",
  "pymongo>=4.6.0,<5.0.0",
  "pydantic>=2.12.0,<3.0.0",
  "pydantic-extra-types>=2.1.0,<3.0.0",
  "phonenumbers>=9.0.11",
  "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = [
  "jinja2>=3.1.6,<4.0.0",
  "jsonpatch>=1.33,<2.0.0",
  "mypy>=1.17.1,<2.0.0",
  "openapi-spec-validator>=0.7.2,<1.0.0",
  "prance>=23.6.21,<26.0.0",
  "pytest>=8.4.1,<10.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "pytest-cov>=6.2.1,<8.0.0",
  "pytest-rerunfailures>=14.0,<17.0",
  "ruff>=0.12.7,<1.0.0",
  "types-python-dateutil>=2.9.0,<3.0.0",
]
docs = [
  "autoclasstoc>=1.7.0,<2.0.0",
  "pyenchant>=3.2.2,<4.0.0",
  "Sphinx>=7.1.2,<10.0.0",
  "sphinx-autoapi>=3.6.0,<4.0.0",
  "sphinx-autodoc-typehints>=2.3.0,<4.0.0",
  "sphinxcontrib-spelling>=8.0.0,<9.0.0",
  "sphinx-copybutton>=0.5.2,<1.0.0",
  "sphinxext-opengraph>=0.10.0,<1.0.0",
  "sphinx-rtd-theme>=3.0.2,<4.0.0",
  "toml>=0.10.2,<1.0.0",
  "types-toml>=0.10.8,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kittycad*"]

[tool.setuptools.package-data]
kittycad = ["py.typed"]

[[tool.uv.index]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
# Since we auto fix these, we don't want to warn about them. Since some doc strings are too long.
ignore = ["E501"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
# We exclude init files since otherwise ruff will delete all the unused imports.
"__init__.py" = ["F401"]
"kittycad/tests/test_examples.py" = ["F841"]

[tool.mypy]
exclude = ["venv", "docs"]
show_error_codes = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["kittycad", "generate/tests"]
